Changed header text to bootstrap grid

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,9 @@
 <section id="banner">
     <div class="container">
-        Dammit, Jim! I'm a developer, not a web designer.
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                Dammit, Jim! I'm a developer, not a web designer.
+            </div>
+        </div>
     </div>
 </section>
